shelter-volunteers/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shelter-client
  namespace: shelter-volunteers
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shelter-client
  template:
    metadata:
      labels:
        app: shelter-client
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      containers:
      - name: client
        image: ghcr.io/oss-slu/shelter_volunteers/client:dev
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: shelter-client
  namespace: shelter-volunteers
spec:
  selector:
    app: shelter-client
  ports:
  - port: 3000
    targetPort: 3000
